Fixed bug #30080 (Passing array or non array of objects)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@187583 c90b9560-bf6c-de11-be94-00142212c4b1